# countries-of-the-world-bot-rust

./: .gitignore  Cargo.toml
src/: commands.rs  data_types.rs  database.rs  main.rs
src/commands/: ping_command.rs  test_command.rs
src/database/: data_types.rs  mod.rs
